# omnix

./: .coderabbit.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SPEC.md  flake.nix
.github/workflows/: ci.yml  integration-test.yml
adrs/: 0001-opt-in-ci-and-dev-tooling.md
crates/omnix-age/: Cargo.toml
crates/omnix-age/src/: main.rs
examples/: full.nix  minimal.nix  single-service.nix
examples/full/: os.nix
examples/full/config/: api.toml  worker.toml
examples/minimal/: os.nix
examples/single-service/: os.nix
lib/: bootstrap.nix  ci.nix  default.nix  deploy.nix  hooks.nix  nu.nix  remote.nix  secret-rules.nix  services.nix  shell.nix  terraform.nix
modules/: acme.nix  base.nix  digitalocean.nix  disko.nix  firewall.nix  services.nix  static-sites.nix  storage.nix  tailscale.nix
scripts/: bootstrap.nu  bootstrap.test.nu  common.nu  common.test.nu  deploy.nu  gitbutler-stack.nu  gitbutler-stack.test.nu  pr-stack-footer.nu  pr-stack-footer.test.nu  terraform.nu  validate-examples.nu
templates/do-service/: flake.nix  keys.nix  os.nix  secretspec.toml  services.nix
templates/do-service/.github/workflows/: ci.yml  integration-test.yml
templates/do-service/config/: my-service.toml  secrets.nix
templates/do-service/infra/: main.tf  outputs.tf  secrets.nix  terraform.tfvars.example  variables.tf
